--- a/homepage.html
+++ b/homepage.html
@@ -26,9 +26,9 @@
     <nav class="navbar">
         <div id="nav-close" class="fas fa-times"></div>
         <a href="homepage.html">Home</a>
-        <a href="/About-us.html">About Us</a>
-        <a href="/destination.html">Destinations</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/about">About Us</a>
+        <a href="/destination">Destinations</a>
+        <a href="/contact">Contact</a>
         <!-- Add this to your navbar in destination.html -->
         <a href="#" id="admin-login-btn">Admin Login</a>
    </nav>
