--- a/homepage.html
+++ b/homepage.html
@@ -25,10 +25,10 @@
 
     <nav class="navbar">
         <div id="nav-close" class="fas fa-times"></div>
-        <a href="homepage.html">Home</a>
-        <a href="/about">About Us</a>
-        <a href="/destination">Destinations</a>
+        <a href="/homepage">Home</a>
+        <a href="/about">About</a>
         <a href="/contact">Contact</a>
+        <a href="/destination">Destinations</a>
         <!-- Add this to your navbar in destination.html -->
         <a href="#" id="admin-login-btn">Admin Login</a>
    </nav>
