--- a/destination.html
+++ b/destination.html
@@ -26,10 +26,12 @@
     <a href="homepage.html" class="logo"> <i class="fas fa-hiking"></i> travel. </a>
     <nav class="navbar">
         <div id="nav-close" class="fas fa-times"></div>
-        <a href="homepage.html">Home</a>
-        <a href="/About-us.html">About Us</a>
-        <a href="/destination.html">Destinations</a>
-        <a href="/contact.html">Contact</a>
+        <a href="/homepage">Home</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+        <a href="/destination">Destinations</a>
+        <!-- Add this to your navbar in destination.html -->
+        <a href="#" id="admin-login-btn">Admin Login</a>
    </nav>
     <div class="icons">
         <div id="menu-btn" class="fas fa-bars"></div>
