--- a/About-us.html
+++ b/About-us.html
@@ -27,10 +27,12 @@
 
         <nav class="navbar">
             <div id="nav-close" class="fas fa-times"></div>
-        <a href="homepage.html">Home</a>
-        <a href="about-us.html">About Us</a>
-        <a href="contact.html">Contact</a>
-        <a href="logout.php">Log Out</a>
+        <a href="/homepage">Home</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+        <a href="/destination">Destinations</a>
+        <!-- Add this to your navbar in destination.html -->
+        <a href="#" id="admin-login-btn">Admin Login</a>
         </nav>
 
         <div class="icons">
