Describe what you changedss

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <div class="wrapper">
              <input type="submit" value="Send" id="button">
 
-            <span class="contact-l"><p class="contact-inline"><a class="link" href="homepage.html">Return</a></p></span>
+            <span class="contact-l"><p class="contact-inline"><a class="link" href="/">Return</a></p></span>
         </div>
         </form>
     </div>
