--- a/homepage.html
+++ b/homepage.html
@@ -294,7 +294,7 @@ document.addEventListener('DOMContentLoaded', function() {
             
             if (data.success) {
                 // Redirect to admin dashboard
-                window.location.href = 'admin-dashboard.html';
+                window.location.href = 'admin-dashboard';
             } else {
                 loginError.textContent = data.message;
             }
