Fixed routes and navbar links

--- a/destination.html
+++ b/destination.html
@@ -23,10 +23,10 @@
     
 <!--Header -->
 <header class="header">
-    <a href="homepage.html" class="logo"> <i class="fas fa-hiking"></i> travel. </a>
+    <a href="/" class="logo"> <i class="fas fa-hiking"></i> travel. </a>
     <nav class="navbar">
         <div id="nav-close" class="fas fa-times"></div>
-        <a href="/homepage">Home</a>
+        <a href="/">Home</a>
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
         <a href="/destination">Destinations</a>
@@ -160,7 +160,7 @@
             </div>
                 <div class="card-content">
                         <p>Historic charm and natural beauty around Shkodra. Explore the vast waters of Lake Shkodra, the ancient Rozafa Castle, and the city's vibrant cultural scene.</p>
-                        <a href="/shkodra.html" class="btn">Explore Shkodra</a>
+                        <a href="/shkodra" class="btn">Explore Shkodra</a>
                 </div>
         </div>
     </div>
@@ -174,10 +174,10 @@
     <div class="box-container">
         <div class="box">
             <h3>Quick Links</h3>
-            <a href="homepage.html"> <i class="fas fa-chevron-right"></i> Home</a>
-            <a href="/About-us.html"> <i class="fas fa-chevron-right"></i> About Us</a>
-            <a href="/destination.html"> <i class="fas fa-chevron-right"></i> Destinations</a>
-            <a href="/contact.html"> <i class="fas fa-chevron-right"></i> Contact</a>
+            <a href="/"> <i class="fas fa-chevron-right"></i> Home</a>
+            <a href="/about"> <i class="fas fa-chevron-right"></i> About Us</a>
+            <a href="/destination"> <i class="fas fa-chevron-right"></i> Destinations</a>
+            <a href="/contact"> <i class="fas fa-chevron-right"></i> Contact</a>
         </div>
 
         <div class="box">
