--- a/5reasons.html
+++ b/5reasons.html
@@ -23,14 +23,14 @@
 
     <header class="header">
 
-        <a href="homepage.html" class="logo"> <i class="fas fa-hiking"></i> travel. </a>
+        <a href="/" class="logo"> <i class="fas fa-hiking"></i> travel. </a>
 
         <nav class="navbar">
             <div id="nav-close" class="fas fa-times"></div>
-            <a href="homepage.html">Home</a>
-            <a href="about-us.html">About Us</a>
-        <a href="contact.html">Contact</a>
-        <a href="logout.php">Log Out</a>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+        <a href="/contact">Contact</a>
+        <a href="/destination">Destinations</a>
         </nav>
 
         <div class="icons">
