--- a/shkodra.html
+++ b/shkodra.html
@@ -11,12 +11,12 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="nav-container">
-            <a href="/homepage.html" class="nav-logo">Discover Albania</a>
+            <a href="/" class="nav-logo">Discover Albania</a>
             <div class="nav-links">
-                <a href="/homepage.html" class="nav-link">Home</a>
-                <a href="/destinations.html" class="nav-link">Destinations</a>
-                <a href="/about.html" class="nav-link">About</a>
-                <a href="/contact.html" class="nav-link">Contact</a>
+                <a href="/" class="nav-link">Home</a>
+                <a href="/destination" class="nav-link">Destinations</a>
+                <a href="/about" class="nav-link">About</a>
+                <a href="/contact" class="nav-link">Contact</a>
             </div>
         </div>
     </nav>
