Fixed routes and navbar links

--- a/5reasons.html
+++ b/5reasons.html
@@ -67,7 +67,7 @@
                 <div class="content">
                      <span>5 Amazing Places to visit in Albania</span>
                 <p>never stop exploring!</p>
-                  <a href="5_amazing_places.html" class="btn">lexo me shume</a>
+                  <a href="/5amazingplaces" class="btn">lexo me shume</a>
                 </div>
                  </div>
                 </div>
@@ -78,7 +78,7 @@
                     <span>make tour</span>
                     <h3>albanian alps</h3>
                  <p>The flagship region for mountain tourism is the Albanian Alps, the National Parks of Thethi, Valbona and the Region of Kelmendi. The “Accursed Mountains” are both truly spectacular and virtuallyimpenetrable except for a series of high passes that link the small number of farmsteads and homes in the valleys below to  the outside world during the summer months. </p>
-                    <a href="albanian_alps.html" class="btn">get started</a>
+                    <a href="/albanianalps" class="btn">get started</a>
                 </div>
                 </div>
                 </div>
@@ -89,7 +89,7 @@
                     <h3>5 reasons why you need to visit Albania</h3>
                     <span>explore the new world</span>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit unde ex molestias soluta consequatur saepe aliquam, excepturi delectus consequuntur minus!</p>
-                    <a href="5reasons.html" class="btn">get started</a>
+                    <a href="/5reasons" class="btn">get started</a>
                 </div>
                  </div>
                 </div>
