--- a/homepage.html
+++ b/homepage.html
@@ -89,7 +89,7 @@
                 <h3>5 reasons why you need to visit Albania</h3>
                 <span>explore the new world</span>
                 <p>Albania is just a mystery for tourists and one of the few places that have not yet been explored. Despite the small volumes, it deserves your attention.</p>
-                <a href="/5reasons.html" class="btn">Read more</a>
+                <a href="/5reasons" class="btn">Read more</a>
                 </div>
                 </div>
             </div>
