--- a/5_amazing_places.html
+++ b/5_amazing_places.html
@@ -67,7 +67,7 @@
                 <div class="content">
                  <span>5 Amazing Places to visit in Albania</span>
                 <p>never stop exploring!</p>
-                 <a href="5_amazing_places.html" class="btn">Read more</a>
+                 <a href="/5amazingplaces" class="btn">Read more</a>
                 </div>
                 </div>
                 </div>
@@ -78,7 +78,7 @@
                 <span>Get ready for</span>
                 <h3>albanian alps</h3>
                 <p>he flagship region for mountain tourism is the Albanian Alps, the National Parks of Thethi, Valbona and the Region of Kelmendi. The “Accursed Mountains” are both truly spectacular and virtuallyimpenetrable except for a series of high passes that link the small number of farmsteads and homes in the valleys below to  the outside world during the summer months. </p>
-                 <a href="albanian_alps.html" class="btn">Read more</a>
+                 <a href="/albanianalps" class="btn">Read more</a>
                 </div>
                 </div>
                 </div>
@@ -89,7 +89,7 @@
                     <h3>5 reasons why you need to visit Albania</h3>
                     <span>explore the new world</span>
                     <p>Albania is just a mystery for tourists and one of the few places that have not yet been explored. Despite the small volumes, it deserves your attention.</p>
-                    <a href="5reasons.html" class="btn">Read more/a>
+                    <a href="/5reasons" class="btn">Read more/a>
                     </div>
                     </div>
                 </div>
