--- a/About-us.html
+++ b/About-us.html
@@ -23,11 +23,11 @@
 
     <header class="header">
 
-        <a href="homepage.html" class="logo"> <i class="fas fa-hiking"></i> travel. </a>
+        <a href="/" class="logo"> <i class="fas fa-hiking"></i> travel. </a>
 
         <nav class="navbar">
             <div id="nav-close" class="fas fa-times"></div>
-        <a href="/homepage">Home</a>
+        <a href="/">Home</a>
         <a href="/about">About</a>
         <a href="/contact">Contact</a>
         <a href="/destination">Destinations</a>
