--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -180,7 +180,7 @@
             // Logout button
             document.getElementById('logout-btn').addEventListener('click', function() {
                 // In a real app, you would call a logout API endpoint
-                window.location.href = 'destination.html';
+                window.location.href = '/destination';
             });
         });
         // Geonames API (direct call)
